src/objects/Procedure_Item__c.object
<CustomObject>
    <fields>
        <fullName>Catheter_Type__c</fullName>
        <label>Catheter Type</label>
        <picklist>
            <controllingField>Procedure_Item__c</controllingField>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisor FL SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steer - MediGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circ fxd loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circ var loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High density</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBSGImplanted_Generator__c</fullName>
        <label>Implanted Generator</label>
        <picklist>
            <picklistValues>
                <fullName>Infinity 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libra XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brio</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBSGPocket_Adapter__c</fullName>
        <label>Pocket Adapter</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2316</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <controllingField>Procedure_Item__c</controllingField>
            <picklistValues>
                <fullName>High Right Atrium (HRA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle of HIS (HIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coronary Sinus (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right Ventricle (RV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulmonary Vein (PV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <picklist>
            <controllingField>Procedure_Item__c</controllingField>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens/BioSense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosense Webster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medtronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baylis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agilis NxT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mullins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (competitive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Electrodes__c</fullName>
        <label>Number of Electrodes</label>
        <picklist>
            <controllingField>Procedure_Item__c</controllingField>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PriceUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PriceUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Procedure Items</relationshipLabel>
        <relationshipName>Procedure_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procedure_Item__c</fullName>
        <label>Procedure Item</label>
        <picklist>
            <picklistValues>
                <fullName>ICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transseptal Needle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP Study - Introducers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP Study - Diagnostic EP Catheters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ablation Catheter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <referenceTo>Procedure__c</referenceTo>
        <relationshipLabel>Procedure Items</relationshipLabel>
        <relationshipName>Procedure_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resterilized__c</fullName>
        <label>Resterilized?</label>
        <picklist>
            <controllingField>Procedure_Item__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tip_Size__c</fullName>
        <label>Tip Size</label>
        <picklist>
            <controllingField>Procedure_Item__c</controllingField>
            <picklistValues>
                <fullName>TactiCath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FlexAbility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FlexAbility SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4/5mm Non-irrigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8/10mm Non-irrigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cryo Balloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cryo Cath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide Irrigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <formula>IF(TEXT(Procedure_Item__c)=&quot;Transseptal Needle&quot;, TEXT(Procedure_Item__c), 
IF(OR(TEXT(Procedure_Item__c)=&quot;ICE&quot;, TEXT(Procedure_Item__c)=&quot;EP Study - Introducers&quot;), TEXT(Procedure_Item__c) + &quot;;&quot; + TEXT(Manufacturer__c),
IF(TEXT(Procedure_Item__c)=&quot;Ablation Catheter&quot;, TEXT(Procedure_Item__c) + &quot;;&quot; + TEXT(Tip_Size__c),
IF(TEXT(Procedure_Item__c)=&quot;EP Study - Diagnostic EP Catheters&quot;, TEXT(Procedure_Item__c) + &quot;;&quot; + TEXT(Catheter_Type__c) + &quot;;&quot; + TEXT(Number_of_Electrodes__c),TEXT(Procedure_Item__c)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Procedure Item</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Procedure Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedure Items</pluralLabel>
    <recordTypes>
        <fullName>SJM_AF</fullName>
        <active>true</active>
        <label>SJM AF</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_User_from_Editing_after24_hours</fullName>
        <active>true</active>
        <description>This rule will restrict regular users from editing Procedure Item records after 24 hours</description>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &apos;00ej0000000Uqu8&apos; &amp;&amp; $User.ProfileId &lt;&gt; &apos;00ej0000000YNhr&apos; &amp;&amp; (Today() - DATEVALUE(CreatedDate)) &gt; 2</errorConditionFormula>
        <errorMessage>You&apos;re trying to edit\delete fields which are locked down.  Individual Procedure Items are locked down for pricing protection 24 hours after submission.</errorMessage>
    </validationRules>
</CustomObject>